--- a/app/views/home/athletes.html.erb
+++ b/app/views/home/athletes.html.erb
@@ -1,3 +1,7 @@
+<%= link_to "Home", index_path, class:"links" %>
+<%= link_to "Athletes", athletes_path, class:"links" %>
+<%= link_to "News", news_path, class:"links" %>
+
 <h1>Athletes</h1>
 
 <%= link_to 'google.com' do %>
@@ -23,6 +27,7 @@
   </div>
 <% end %>
 
+<%= link_to 'google.com' do %>
 <div class="box">
   <ul>
     <li>Kyle G</li>
@@ -31,7 +36,9 @@
     <li>Freshman</li>
   </ul>
 </div>
+<% end %>
 
+<%= link_to 'google.com' do %>
 <div class="box">
     <ul>
       <li>Micah Alleyne</li>
@@ -40,7 +47,9 @@
       <li>Freshman</li>
     </ul>
 </div>
+<% end %>
 
+<%= link_to 'google.com' do %>
 <div class="box">
   <ul>
     <li>Austin</li>
@@ -49,7 +58,9 @@
     <li>Freshman</li>
   </ul>
 </div>
+<% end %>
 
+<%= link_to 'google.com' do %>
 <div class="box">
   <ul>
     <li></li>
@@ -58,3 +69,4 @@
     <li>Freshman</li>
   </ul>
 </div>
+<% end %>
