--- a/app/views/home/athletes.html.erb
+++ b/app/views/home/athletes.html.erb
@@ -30,7 +30,7 @@
 <%= link_to 'google.com' do %>
 <div class="box">
   <ul>
-    <li>Kyle G</li>
+    <li>Kyle Goree</li>
     <li>5' 8",205lbs</li>
     <li>Rb,De</li>
     <li>Freshman</li>
@@ -43,7 +43,7 @@
     <ul>
       <li>Micah Alleyne</li>
       <li>5' 2",105lbs</li>
-      <li>Rb</li>
+      <li>Rb,De</li>
       <li>Freshman</li>
     </ul>
 </div>
@@ -52,7 +52,7 @@
 <%= link_to 'google.com' do %>
 <div class="box">
   <ul>
-    <li>Austin</li>
+    <li>Austin Rogol</li>
     <li>6' 2",160lbs</li>
     <li>Te,De</li>
     <li>Freshman</li>
