--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,6 +12,7 @@
 <%= link_to 'google.com' do %>
   <div class="box">
     <ul>
+      <%= image_tag("images.jpeg", class:"h_image") %>
       <li>William Bain</li>
       <li>5' 8",150lbs</li>
       <li>Wr,Olb</li>
@@ -35,7 +36,7 @@
 <%= link_to 'google.com' do %>
 <div class="box">
   <ul>
-    <li>Kyle G</li>
+    <li>Kyle Goree</li>
     <li>5' 8",205lbs</li>
     <li>Rb,De</li>
     <li>Freshman</li>
