--- a/app/views/home/news.html.erb
+++ b/app/views/home/news.html.erb
@@ -1,3 +1,10 @@
 <%= link_to "Home", index_path, class:"links" %>
 <%= link_to "Athletes", athletes_path, class:"links" %>
 <%= link_to "News", news_path, class:"links" %>
+
+<h1>News</h1>
+
+<div class="N_section">
+ <h2 class="N_h2">Saint Marys Jv 7-3</h2>
+ <p class="N_p">Saint Mary's College High School Jv team with Noah(QB),Kyle(RB,DE),JR Bedford(WR,S) and Arnav(DT,LG) lead the panthers to a 7-3 record. They had a promising  freshman class with  20 freshman and 4 sophmores. During they offseason they are doing weekly workouts with a possibility of 8 members moving up to varsity. The past season was exciting we llook forward to see what this team can do. </p>
+</div>
